@@ -66,7 +66,7 @@
 #pragma mark - object methods
 
 - (void)presentPasscodeVerifyController {
-#if !defined(DEBUG) || 1
+#if !defined(DEBUG)// || 1
     passcodeAttempts = 0;
     if ([HRKeychainManager isPasscodeSet]) {
         
