@@ -11,5 +11,7 @@
 @interface HRRootViewController : UIViewController
 
 @property (nonatomic, retain) IBOutlet UIBarButtonItem *C32ButtonItem;
+@property (retain, nonatomic) IBOutlet UIBarButtonItem *aboutBarButtonItem;
+@property (retain, nonatomic) IBOutlet UIBarButtonItem *toolsBarButtonItem;
 
 @end
