@@ -1,7 +1,10 @@
 # 2012-4-02
 
 - Removed fake message in footer
-
+- Added tools button to nav bar
+- Removed privacy demo
+- Moved feedback button to top of about
+- Added build date to about view
 
 # 2012-3-30
 
